particular match.

If you define a Constant NO_IMPLICIT_ACTIONS, the library will not 
attempt to do things that implicitly must be done like taking an object 
from a sack before dropping it.

TAKE ALL has been modified such that scenery or animate objects will not 
be taken.  To revert back to traditional behavior, define Constant 
TRADITIONAL_TAKE_ALL at the beginning of your program.



Issues addressed in Release 6/12 (12????)
=========================================
Issue L61101
each_turn property causes runtime error.
Problem: An each_turn property with both a local routine and a routine 
inherited from a Class causes a runtime error in Strict mode.
Status: Fixed

Issue L61102
GET IN now matches Compass object
Adding "in_obj.&name-->0 = '.ignore';" to Initialise() reverts back to 
the previous behavior.  
Status: Maybe fix?

Issue L61103
"statusline time;" statement isn't recognized
Problem: When I compile Greystone with 6.30 and 6/11 my statusline time; 
statement is seemingly ignored; the game runs by moves and not a clock. 
If I revert back to 6.21 and 6/10 the statusline is indeed a clock again 
and not a move counter.
Status: Nothing yet

Issue L61104
ListMaker doesn't support 'serial' commas
Problem: The WriteListFrom() listmaker doesn't support 'serial' commas 
(aka Oxford or Harvard commas): Tom, Dick, and Harry.
Status: Fixed

Issue L61105
'Game uses colour' bit is always set.
Problem: Every game compiled with the 6/11 library has the 'game uses 
colour' bit set in the Flags2 header word.
Fixed: From now on, if you want a game to use color, add "Constant 
COLOUR;" or "Constant COLOR;" to the beginning of your code.
Status: Fixed

Issue L61106
Improvement to LibraryExtensions.RunUntil
Problem: The LibraryExtensions.RunUntil property (new at 6/11 and not 
currently used by the library) should return simply true or false if it 
does nothing.
Status: Fixed

Issue L61107
(The) with 'proper' should capitalise object name